[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/LinfocitoT.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pictures/linfocitoT.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="LinfocitoT" type="Sprite"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 22, 22 )
shape = SubResource( 1 )

[node name="Stun_Timer" type="Timer" parent="."]
wait_time = 0.7

[node name="Direction_Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Reload_Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Stun_Timer" to="." method="_on_Stun_Timer_timeout"]
[connection signal="timeout" from="Direction_Timer" to="." method="_on_Direction_Timer_timeout"]
[connection signal="timeout" from="Reload_Timer" to="." method="_on_Reload_Timer_timeout"]
